@@ -1,6 +1,7 @@
 Version 0.4.17
 --------------
 + uClibc compatibility, thanks to Metin KAYA <metin@EnderUNIX.org>
++ BitStream: Skip methods improvements
 
 Version 0.4.16, 2010-10-24
 -------------
